--- a/index.css
+++ b/index.css
@@ -13,12 +13,9 @@ body {
 
 .pw-box {
 	width: 446px;
-	max-height: 320px;
-	padding: 115px 52px;
-	margin: 0 auto;
+	padding: 75px 52px;
 	position: relative;
-	top: 50%;
-	transform: translateY(-50%);
+	margin: auto;
 	border-radius: 2px;
 	background-color: #1f2937;
 }
@@ -27,7 +24,7 @@ h1 {
 	width: 355px;
 	font-size: 40px;
 	line-height: 40px;
-	margin-bottom: 10px;
+	margin-bottom: -10px;
 }
 
 p {
@@ -59,7 +56,6 @@ hr {
 	width: 446px;
 	border: 0;
 	border-top: 1px solid #2f3e53;
-
 	margin: 0 0 40px 0;
 }
 
